# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "fraplib"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD 3-Clause License" }
authors = [
 { name = "Elizabeth May", email = "ejmay2012@gmail.com" },
]
classifiers = [
 "Development Status :: 4 - Beta",
 "Intended Audience :: Developers",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: BSD License",
 "Operating System :: OS Independent",
 "Programming Language :: Python",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.8",
 "Programming Language :: Python :: 3.9",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
    "czifile",
    "numpy",
    "scipy",
    "symfit",
    "matplotlib",
    "pandas",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/emay2022/fraplib"
Documentation = "https://github.com/emay2022/fraplib#fraplib"
Repository = "https://github.com/emay2022/fraplib.git"

[project.optional-dependencies]
fancyplotting = ["mpl-interactions"]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
src_paths = "fraplib"
multi_line_output = 3

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.pydocstyle]
match_dir = "fraplib"
convention = "numpy"
add_select = ["D402","D415","D417"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]

[tool.mypy]
files = "fraplib"
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
implicit_reexport = false
# this is strict!
# disallow_untyped_defs = true
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = true


[tool.hatch.metadata]
allow-direct-references = true